# anos

./: .editorconfig  .pre-commit-config.yaml  .rustfmt.toml  .taplo.toml  Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain.toml  x86_64-anos.json
.cargo/: config.toml
crates/ana_interrupts/: Cargo.toml
crates/ana_interrupts/src/: lib.rs
crates/ana_serial/: Cargo.toml
crates/ana_serial/src/: lib.rs
crates/ana_tests/: Cargo.toml
crates/ana_tests/src/: lib.rs
crates/ana_vga/: Cargo.toml
crates/ana_vga/src/: lib.rs
crates/anaos/: Cargo.toml
crates/anaos/src/: lib.rs  main.rs
crates/anaos/tests/: basic_boot.rs  should_panic.rs
src/: interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
