[package]
authors      = ["Murilo Ijanc' <mbsd@m0x.ru>"]
description  = "A study on operating systems"
edition      = "2021"
homepage     = "https://m0x.ru"
license      = "MIT"
name         = "anos"
repository   = "https://git.sr.ht/~mbsd/anos"
rust-version = "1.78"
version      = "0.1.0"

[lints.clippy]
all        = { level = "warn" }
empty_loop = { level = "allow", priority = 1 }

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"

# disable the genration of unwinding
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

