[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
authors      = ["Murilo Ijanc' <mbsd@m0x.ru>"]
description  = "A study on operating systems"
edition      = "2021"
homepage     = "https://m0x.ru"
license      = "MIT"
repository   = "https://git.sr.ht/~mbsd/anos"
rust-version = "1.78"
version      = "0.1.0"

[workspace.lints.clippy]
all        = { level = "warn" }
empty_loop = { level = "allow", priority = 1 }

[workspace.dependencies]
ana_vga        = { version = "0.1.0", path = "crates/ana_vga" }
ana_serial     = { version = "0.1.0", path = "crates/ana_serial" }
ana_interrupts = { version = "0.1.0", path = "crates/ana_interrupts" }

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin        = "0.9.8"
volatile    = "0.2.6"
uart_16550  = "0.3.0"
x86_64      = "0.15.1"
