[package]
name                   = "ana_interrupts"
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
ana_vga    = { workspace = true }
ana_serial = { workspace = true }
x86_64     = { workspace = true }

lazy_static = { workspace = true }

[lints]
workspace = true
