[package]
name                   = "ana_tests"
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
ana_serial = { workspace = true }

x86_64 = { workspace = true }

[lints]
workspace = true
