[package]
name                   = "ana_vga"
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
lazy_static = { workspace = true }
spin        = { workspace = true }
volatile    = { workspace = true }

[lints]
workspace = true
